# gg_wx_fapiao_download

./: .gitignore  .npmrc  README.md  build.bat  build_scripts.bat  main.py  package.json  pyproject.toml
src/: configEditor_launcher.py  download_pdf_and_click.js  launcher.py  main_launcher.py  pdf_change.py  scripts.js  watchfolder.py  自动下载脚本.js
src/config/: __init__.py
src/events/: __init__.py  configEditorEvents.py
src/scripts/: 一些关键信息.py
src/ui/: configEditor.py  main.py
src/utils/: __init__.py  tk_utils.py  tools.py  watchfolder.py
ui/: configEditor.frm  main.frm
